--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <header>
-
+    <h1>I'm starting web development again</h1>
 </header>
 
     <body>
-    
+        hehe !
     </body>
 
 <footer>
