--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Otaku</title>
+    <title>My website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,11 +13,12 @@
 </header>
 
     <body>
-        Firstly i win learn html and css !
+        <h3>Hi, I am a junior cybersecurity analyst and I like everything related to IT security, especially CTF (Capture The Flag) challenges. </h3>
+        <img src="img/057957ed-3913-4f67-a68e-a557011918ff.jpeg" alt="">
     </body>
 
 <footer>
-
+    Making by MrFrost
 </footer>
 
 </html>
