Modification de la taille de l'image et police du texte

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <header>
     <h1>I'm starting web development again</h1>
+
 </header>
 
     <body>
-        <h3>Hi, I am a junior cybersecurity analyst and I like everything related to IT security, especially CTF (Capture The Flag) challenges. </h3>
+        <p>Hi, I am a junior cybersecurity analyst and I like everything related to IT security, especially CTF (Capture The Flag) challenges. </p>
         <img src="img/057957ed-3913-4f67-a68e-a557011918ff.jpeg" alt="">
     </body>
 
