Structuration de la page

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 
 <header>
-    <h1>I'm starting web development again</h1>
+    <h1>Accueil</h1>
 
 </header>
 
     <body>
         <p>Hi, I am a junior cybersecurity analyst and I like everything related to IT security, especially CTF (Capture The Flag) challenges. </p>
         <img src="img/057957ed-3913-4f67-a68e-a557011918ff.jpeg" alt="">
+        <h1>History</h1>
+        <p>I'm just want to do a commit</p>
     </body>
 
 <footer>
