--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eliotlks</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="img/Frost_gaming.png">
+    <link rel="shortcut icon" type="image/png" href="img/android-chrome-192x192.png">
 </head>
 
 <header>
-    <h1>Accueil</h1>
-
+    <img src="img/android-chrome-192x192.png" alt=""> <br>
+    <h1>About me</h1>
 </header>
 
     <body>
-        <p>Hi, I am a junior cybersecurity analyst and I like everything related to IT security, especially CTF (Capture The Flag) challenges. </p>
-        <img src="img/057957ed-3913-4f67-a68e-a557011918ff.jpeg" alt="">
+        <p>Hi! <br>I'm Eliot, a junior cybersecurity analyst who loves all things in IT security, especially CTF (Capture The Flag) challenges. </p>
         <h1>History</h1>
         <p>I'm just want to do a commit</p>
     </body>
