Structuration de la page web

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
 <header>
     <img src="img/android-chrome-192x192.png" alt=""> <br>
-    <h1>About me</h1>
 </header>
 
     <body>
-        <p>Hi! <br>I'm Eliot, a junior cybersecurity analyst who loves all things in IT security, especially CTF (Capture The Flag) challenges. </p>
-        <h1>History</h1>
-        <p>I'm just want to do a commit</p>
+        <h1>About me</h1>
+            <p>Hi! I'm Eliot, a junior cybersecurity analyst who loves all things in IT security, especially CTF (Capture The Flag) challenges. </p>
+        <h1>Projects</h1>
+        <p>This part is for my personal projects :</p>
+            <h2 color="red">Encrypt char</h2>
     </body>
 
 <footer>
